--- a/footer.html
+++ b/footer.html
@@ -34,6 +34,8 @@
 
 		$('#collapseOne').collapse('hide');
 		$(".accordion").collapse()
+		$('#accordion2').removeAttr('style');
+
 	</script>
 
 	</body>	
