made coming soon page

--- a/footer.html
+++ b/footer.html
@@ -4,8 +4,8 @@
 				<p>
 					<a href="about.shtml">About</a>
 					<a href="practice.shtml">Practice Areas</a>
-					<a href="faqs.shtml">FAQs</a>
-					<a href="blog.shtml">Blog</a>
+					<a href="comingsoon.shtml">FAQs</a>
+					<a href="comingsoon.shtml">Blog</a>
 					<a href="contact.shtml">Contact</a>
 					 ©Robin Goeman 2013
 				</p>	
