--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
 	<nav class="navbar">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="http://www.michellerittner.com/GoemanLaw"><h2>Robin Goeman</h2><small>Attorney at Law</small></a>
+				<a class="brand" href="http://goemanlaw.com"><h2>Robin Goeman</h2><small>Attorney at Law</small></a>
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li>
@@ -30,10 +30,10 @@
 							<a href="practice.shtml">Practice Areas</a>
 						</li>	
 						<li>
-							<a href="faqs.shtml">FAQs</a>
+							<a href="comingsoon.shtml">FAQs</a>
 						</li>
 						<li>
-							<a href="blog.shtml">Blog</a>
+							<a href="comingsoon.shtml">Blog</a>
 						</li>	
 						<li>
 							<a href="contact.shtml">Contact</a>
