Moved address to left, added disclosure

--- a/footer.html
+++ b/footer.html
@@ -7,8 +7,13 @@
 					<a href="comingsoon.shtml">FAQs</a>
 					<a href="comingsoon.shtml">Blog</a>
 					<a href="contact.shtml">Contact</a>
-					 ©Robin Goeman 2013
 				</p>	
+				<p class="disclosure">
+					26 Court St., Suite 913, Brooklyn, NY 11242. Ph: 718-866-5373.
+				</p>
+				<p>
+					©Robin Goeman 2014. Attorney Advertising.
+				</p>
 		</footer>		
 
 <!-- Load jQuery -->
