--- a/header.html
+++ b/header.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
-<head>
-	<meta charset="utf-8">	
-	<title>Goeman Law</title>
-
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-responsive.css"/>
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap.css"/>
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/jquery-ui-1.9.2.custom.min.css"/>
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css"/>
-
-	<!-- <link rel="icon" type="image/png" href="assets/images/RGfavicon.ico"> -->
-
-</head>
-
 
 <body class="page-content" data-spy="scroll">
 	<nav class="navbar">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="http://goemanlaw.com"><h2>Robin Goeman</h2><small>Attorney at Law</small></a>
+				<div class="brand">
+					<a href="http://goemanlaw.com" itemprop="name">
+						<h2 class="name">Robin Goeman</h2>
+					</a>
+					<small>Attorney at Law<br>
+						<div id="address_info">
+							26 Court St., Suite 913, Brooklyn, NY 11242<br>
+							<strong>Phone: 718-866-5373</strong>
+						</div>
+					</small>
+				</div>
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li>
@@ -33,7 +26,7 @@
 							<a href="comingsoon.shtml">FAQs</a>
 						</li>
 						<li>
-							<a href="comingsoon.shtml">Blog</a>
+							<a href="http://twitter.com/GoemanLaw">Blog</a>
 						</li>	
 						<li>
 							<a href="contact.shtml">Contact</a>
